Sat Feb 24 00:00:27 1996  Theodore Y. Ts'o  <tytso@dcl>

	* g_imp_name.c (gss_import_name): If the user passes in a
		name-type which is mechanism specific, then import it
		immediately; don't lazy evaluate it.

	* g_mechname.c (gss_add_mech_name_type): New file for maintaining
		a registry of name-types which are mechanism specific.

	* g_dsp_name.c (gss_display_name): If there is a mechanism
		specific name, use it when displaying the name.

	* oid_ops.c (generic_gss_copy_oid): New function used to copy an
		OID object.

Fri Feb 23 18:27:20 1996  Theodore Y. Ts'o  <tytso@dcl>

	* g_rel_name.c (gss_release_name): Release the OID in the
		mechanism name, as it is now allocated.  Release the
		mechanism-specific name if it is present.

	* g_imp_name.c (gss_import_name):  Copy the input OID, so we don't
		have to worry about memory allocation problems later.
		Initialize mech_type and mech_name in the union name to be
		zero.  (for now)

	* oid_ops.c (generic_gss_copy_oid): Added new function to copy OIDs.

Thu Feb 22 21:48:44 1996  Theodore Y. Ts'o  <tytso@dcl>

	* mglueP.h: Add space for the mechanism name in gss_union_name.

Sat Feb 10 18:38:43 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* g_glue.c: grab stdlib.h to get NULL

Fri Feb  9 09:04:50 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* g_inquire_context.c: Include stdlib.h if present

Wed Feb  7 14:16:01 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* g_initialize.c: Need to include stdio.h, errno.h all the time.

Tue Feb  6 23:59:49 1996  Theodore Y. Ts'o  <tytso@dcl>

	* g_initialize.c (gss_initialize): Added code to try to
		dynamically read in the GSSAPI mechanim library using
		dlopen().

Wed Jan 24 20:49:13 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* g_compare_name.c, g_delete_sec_context.c, g_dsp_status.c,
	g_exp_sec_context.c, g_imp_sec_context.c, g_rel_buffer.c,
	g_rel_cred.c, g_rel_name.c, g_rel_oid_set.c, get_mechanism.c,
	get_mtype.c: Include stdlib.h and string.h as needed
